GP-7298: The ProgramLoader and ImportBatchTask now properly validate loader options